# chatpage

./: pyproject.toml
.devcontainer/: Dockerfile
notebooks/: openai.ipynb
